Refacto exercice3 (Stream)